# dto/product_request.go
@@ -1,0 +1,7 @@
+package dto
+
+type ProductRequest struct {
+	Name  string `json:"name"`
+	Harga int    `json:"harga"`
+	Stock int    `json:"stock"`
+}
