# models/product.go
@@ -11,7 +11,8 @@ type Product struct {
 // karena Products = public/exported
 // sedangkan products = private/unexported
 var Products = []Product{
-	{ID: 1, Name: "indomie", Harga: 5000, Stock: 10},
+	{ID: 1, Name: "Indomie", Harga: 5000, Stock: 10},
 	{ID: 2, Name: "Oreo", Harga: 3000, Stock: 30},
 	{ID: 3, Name: "Wafer", Harga: 12000, Stock: 20},
+	{ID: 4, Name: "Ultra Milk", Harga: 10000, Stock: 15},
 }
